--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,31 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  /* 28 x 28 squares each square is 20px wide */
+  width: 560px;
+  height: 560px;
+  border: 1px solid black;
+}
+
+.grid div {
+  width: 20px;
+  height: 20px;
+}
+
+.pac-dot {
+  background-color: green;
+  border: 5px solid white;
+}
+
+.wall {
+  background-color: blue;
+}
+
+.power-pellet {
+  background-color: green;
+  border-radius: 10px;
+}
