--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,29 @@
   box-sizing: border-box;
 }
 
+body{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+/* <--------- Content before the game window --------->*/
+
+#game_name {
+  font-size: 5rem;
+  font-family: 'Roboto', sans-serif;
+  color: rgb(214, 241, 60)
+}
+
+#current_word {
+  color: rgb(212, 69, 69);
+}
+
+/* <--------- Content for the game window ---------> */
+
 .grid {
   display: flex;
   flex-wrap: wrap;
