--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
 
 #game_name {
   font-size: 5rem;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: rgb(214, 241, 60);
 }
 
@@ -34,7 +34,6 @@ h2 {
   align-items: center;
   margin: 0;
 }
-
 
 /* <--------- Content after the game window --------->*/
 
