--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ h2 {
 button {
   font-size: larger;
   font-weight: bold;
-  border: 5px solid transparent;
+  /* border: 5px solid transparent; */
   transition: 0.2s ease;
   border-radius: 100px;
 
@@ -106,6 +106,69 @@ button:hover {
 
 .hidden {
   visibility: hidden;
+}
+
+#container1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-top: 2px;
+}
+
+.spacing {
+  width: 67px;
+  height: 20px;
+  display: flex;
+  justify-content: space-between;
+  /* background-color: violet; */
+}
+
+#music-toggle-container {
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  border: 2px solid var(--main-button-color);
+  /* background-color: blue; */
+  position: relative;
+}
+
+#music-toggle-container::before {
+  width: 6px;
+  height: 6px;
+  background-color: rgb(0, 121, 121);
+
+  position: absolute;
+  content: '';
+  top: 5px;
+  left: 3px;
+  /* background-color: blue; */
+}
+
+#music-toggle-container::after {
+  position: absolute;
+  content: '';
+  top: 1px;
+  left: 5px;
+
+  width: 0;
+  height: 0;
+  border-top: 7px solid transparent;
+  border-bottom: 7px solid transparent;
+
+  border-right: 7px solid rgb(0, 121, 121);
+}
+
+#cross-out-line {
+  position: absolute;
+
+  width: 18px;
+  height: 2px;
+  top: 6px;
+  left: 0px;
+  background-color: red;
+  z-index: 1;
+  transform: rotate(45deg);
 }
 
 /* <--------- Content for the game window ---------> */
