--- a/styles.css
+++ b/styles.css
@@ -315,3 +315,126 @@ button:hover {
   position: absolute;
   content: '';
 }
+
+/* <--------- Content for the game window animations ---------> */
+
+#grid-container {
+  position: relative;
+}
+
+.appearing-message {
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  top: 20%;
+  left: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  color: blue;
+  color: var(--main-yellow-color);
+  font-size: 50px;
+  font-weight: bold;
+  /* text-shadow: 0 0 5px black; */
+  text-shadow: 0 0 20px black;
+
+  visibility: hidden;
+}
+
+.won-animation {
+  animation-duration: 5s;
+  animation-name: won-keyframes;
+  animation-timing-function: ease;
+}
+
+@keyframes won-keyframes {
+  0% {
+    visibility: visible;
+    opacity: 1;
+    transform: scale(0.1);
+  }
+  20% {
+    transform: scale(1) rotate(360deg);
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(360deg) scale(1);
+    opacity: 0;
+  }
+}
+
+.lost-animation {
+  animation-duration: 3600s;
+  animation-name: lost-keyframes;
+  animation-timing-function: ease;
+}
+
+@keyframes lost-keyframes {
+  0% {
+    visibility: visible;
+    opacity: 1;
+    transform: scale(0.1);
+  }
+  0.05% {
+    transform: scale(1.5);
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.5);
+    opacity: 0;
+  }
+}
+
+.wrong-letter-animation {
+  animation-duration: 2s;
+  animation-name: wrong-letter-keyframes;
+  animation-timing-function: ease;
+}
+
+@keyframes wrong-letter-keyframes {
+  0% {
+    visibility: visible;
+    opacity: 1;
+    transform: scale(0.1);
+  }
+  20% {
+    transform: scale(1);
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+
+.ghost-hit-animation {
+  animation-duration: 2s;
+  animation-name: ghost-hit-keyframes;
+  animation-timing-function: ease;
+}
+
+@keyframes ghost-hit-keyframes {
+  0% {
+    visibility: visible;
+    opacity: 1;
+    transform: scale(0.1);
+  }
+  20% {
+    transform: scale(1);
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
